# convert-model-for-meta-quest

./: .cmq_worker.env.example  .gitignore  CHANGELOG.md  README.md  Run Worker.command  pyproject.toml
scripts/: optimize_model.py  package_worker_zip.sh  run_regression.py  run_unit_tests.py  run_worker.py  security_scan.sh  worker_desktop_app.py
src/quest_model_optimizer/: __init__.py  blender_worker.py  cli.py  connection_code.py  desktop_worker.py  env_loader.py  gui_log_window.py  logging_utils.py  paths.py  reduction.py  remote_client.py  runner.py  task_dispatcher.py  updater.py  version.py  worker_app.py  worker_loop.py  worker_models.py  worker_processor.py  worker_security.py  worker_summary.py
tests/: test_connection_code_unittest.py  test_desktop_worker_preflight_unittest.py  test_env_loader_unittest.py  test_reduction.py  test_reduction_unittest.py  test_remote_client_unittest.py  test_task_dispatcher_unittest.py  test_updater_unittest.py  test_worker_app_unittest.py  test_worker_desktop_launcher_unittest.py  test_worker_loop_unittest.py  test_worker_security_unittest.py  test_worker_summary_unittest.py
